--- a/styles/global.css
+++ b/styles/global.css
@@ -3,3 +3,24 @@
   padding: 0;
   box-sizing: border-box;
 }
+:root {
+  --brand-color: #EF5F4C;
+  --background-color: #FFFFFF;
+  --surface-color: #F5F5F5;
+  --skeleton-color: #D9D9D9;
+  --shape-transparency: #ffffff91;
+  --text-color-primary: #313131;
+  --text-color-secundary: #6c6c6c;
+  
+  --font-family: "Poppins", serif;
+  --text-lg: bold 32px/125% var(--font-family);
+  --text: 16px/150% var(--font-family);
+  --text-md: 14px/175% var(--font-family);
+  --text-sm: 12px/175% var(--font-family);
+}
+body {
+  color: var(--text-color-secundary);
+  background-color: var(--background-color);
+  
+}
+
