--- a/styles/global.css
+++ b/styles/global.css
@@ -11,7 +11,7 @@
   --shape-transparency: #ffffff91;
   --text-color-primary: #313131;
   --text-color-secundary: #6c6c6c;
-  
+
   --font-family: "Poppins", serif;
   --text-lg: bold 32px/125% var(--font-family);
   --text: 16px/150% var(--font-family);
@@ -19,8 +19,25 @@
   --text-sm: 12px/175% var(--font-family);
 }
 body {
+  font: var(--text);
   color: var(--text-color-secundary);
   background-color: var(--background-color);
   
+}
+a {
+ text-decoration: none;
+ color: inherit; 
+}
+a:hover {
+  color: var(--brand-color);
+  text-decoration: underline;
+}
+.container {
+  padding-inline: 32px;
+  max-width: 1280px;
+  margin-inline: auto;
+}
+.bg-surface-color {
+  background-color: var(--surface-color);
 }
 
