--- a/styles/header.css
+++ b/styles/header.css
@@ -33,3 +33,9 @@ header .container {
   align-items: center;
   gap: 8px;
 }
+#profile img {
+  width: 176px;
+  height: 176px;
+  object-fit: cover;
+  border-radius: 50%;
+}
